--- a/challenge-01/package.json
+++ b/challenge-01/package.json
@@ -4,9 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "tsc:init": "tsc --init",
     "test": "jest --coverage"
   },
   "dependencies": {
-    "jest": "^27.2.1"
+    "jest": "^27.2.1",
+    "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2"
   }
 }
