--- a/challenge-01/package.json
+++ b/challenge-01/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "tsc:init": "tsc --init",
-    "test": "jest --coverage"
+    "test": "tsc && jest dist/"
   },
   "dependencies": {
     "jest": "^27.2.1",
