--- a/challenge-01/package.json
+++ b/challenge-01/package.json
@@ -13,6 +13,17 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2"
+    "@eduzz/eslint-config-houston": "^0.32.5",
+    "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-eslint-plugin": "^3.5.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint-plugin-unused-imports": "^1.1.4",
+    "prettier": "^2.4.1"
   }
 }
