--- a/challenge-01/package.json
+++ b/challenge-01/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "tsc:init": "tsc --init",
-    "test": "tsc && jest dist/"
+    "test:watch": "jest --maxWorkers=1 --watch"
   },
   "dependencies": {
     "jest": "^27.2.1",
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "eslint-plugin-unused-imports": "^1.1.4",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5"
   }
 }
