--- a/challenge-01/package.json
+++ b/challenge-01/package.json
@@ -4,27 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "ts-node src/cpf_after.ts",
     "build": "tsc",
     "tsc:init": "tsc --init",
-    "test:watch": "jest --maxWorkers=1 --watch"
+    "test:watch": "jest --maxWorkers=1 --watch",
+    "test": "jest --no-cache --verbose"
   },
   "dependencies": {
     "jest": "^27.2.1",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@eduzz/eslint-config-houston": "^0.32.5",
     "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-eslint-plugin": "^3.5.3",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-sonarjs": "^0.10.0",
-    "eslint-plugin-unused-imports": "^1.1.4",
-    "prettier": "^2.4.1",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1"
   }
 }
