--- a/challenge-01/tsconfig.json
+++ b/challenge-01/tsconfig.json
@@ -3,7 +3,8 @@
   "incremental": true,
   "target": "es6",
   "module": "commonjs",
-  "outDir": "./dist",
+  "rootDir": "src",
+  "outDir": "src",
   "strict": true, // depende do seu nível de conhecimento em TypeScript, recomendo começar com false
   "esModuleInterop": true
   },
